ejs file add, package.json dependencies update, README.md stack updtaes

--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/Puneeth159/fsa-group-7#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "consolidate": "^0.16.0",
+    "ejs": "^3.1.6",
+    "eslint": "^7.21.0",
+    "express": "^4.17.1",
+    "node": "^14.15.0"
   }
 }
