--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "ejs": "^3.1.6",
     "eslint": "^7.21.0",
     "express": "^4.17.1",
-    "node": "^14.15.0"
+    "node": "^14.15.0",
+    "pg": "latest",
+    "pg-hstore": "latest",
+    "sequelize": "latest",
+    "sequelize-cli": "latest"
   }
 }
