--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "fsa-group-7",
   "version": "1.0.0",
-  "description": "\"treasure hunt app\"",
-  "main": "index.js",
+  "description": "Full Stack Application",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node app.js",
+    "publishToHeroku": "cd ../ && git subtree push --prefix api heroku-locator-backend main || true"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,8 @@
     "pg": "latest",
     "pg-hstore": "latest",
     "sequelize": "latest",
-    "sequelize-cli": "latest"
+    "sequelize-cli": "latest",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.12.0"
   }
 }
