--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "publishToHeroku": "cd ../ && git subtree push --prefix api heroku-locator-backend main || true"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -21,15 +20,16 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "consolidate": "^0.16.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "eslint": "^7.21.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.15",
     "node": "^14.15.0",
     "pg": "latest",
     "pg-hstore": "latest",
     "sequelize": "latest",
-    "sequelize-cli": "latest",
-    "mongodb": "^3.6.4",
-    "mongoose": "^5.12.0"
+    "sequelize-cli": "latest"
   }
 }
